[package]
name = "rust-async-fn-trait"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.3.1", default-features = false }
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros"] }
axum-server = "0.5.1"
tokio = { version = "1.31.0", features = ["full"] }
